[BPK-3353] Fix sidenav layout overflow on mobile devices (#200)

--- a/docs/src/layouts/SideNavLayout/SideNavLayout.scss
+++ b/docs/src/layouts/SideNavLayout/SideNavLayout.scss
@@ -20,6 +20,7 @@
 
 .bpkdocs-side-nav-layout {
   display: flex;
+  overflow: hidden;
 
   &__sidebar-destop-wrapper {
     display: flex;
